calendar/templates/mobile/app.css
/* ... */
.calendar_calEventIcons {
  position: absolute;
  right: 0px;
  top: 0px;
  /* Do not show icons in header, only tooltip */
  display: none;
}
.calendar_calEventIcons img {
  height: 13px;
}
.calendar_calEventHeaderSmall .calendar_calEventIcons img {
  height: 13px;
}
/* body of the event
 */
.calendar_calEventBody,
.calendar_calEventBodySmall {
  padding: 0px 3px 0px;
  left: 2px;
  right: 2px;
  height: 99%;
  white-space: normal;
  background-color: rgba(255, 255, 255, 0.8);
}
.calendar_calEventBody > p,
.calendar_calEventBodySmall > p {
  white-space: pre-wrap;
}
.calendar_calEventBody .calendar_calTimespan {
  display: none;
}
.calendar_calTimeGrid .calendar_calEventBodySmall {
  font-size: 95%;
}
.calendar_calEventLabel {
  font-weight: bold;
  font-size: 90%;
  display: inline;
}
.calendar_calEventTitle {
  font-weight: bold;
  font-size: 100%;
  display: inline;
}
/* Event is too small for full display */
.calendar_calTimeGrid:not(.calendar_calTimeGridList) .calendar_calEventSmall[data-visible_lines='1'] .calendar_calTimespan {
  display: none;
}
.calendar_calTimeGrid:not(.calendar_calTimeGridList) .calendar_calEventSmall[data-visible_lines='2'] .calendar_calTimespan,
.calendar_calTimeGrid:not(.calendar_calTimeGridList) .calendar_calEventSmall[data-visible_lines='3'] .calendar_calTimespan {
  display: inline;
}
.calendar_calTimeGrid:not(.calendar_calTimeGridList) .calendar_calEventSmall[data-visible_lines='1'] .calendar_calEventTitle,
.calendar_calTimeGrid:not(.calendar_calTimeGridList) .calendar_calEventSmall[data-visible_lines='2'] .calendar_calEventTitle,
.calendar_calTimeGrid:not(.calendar_calTimeGridList) .calendar_calEventSmall[data-visible_lines='3'] .calendar_calEventTitle {
  display: inline;
}
.calendar_calTimeGrid:not(.calendar_calTimeGridList) .calendar_calEventSmall .calendar_calEventBody {
  padding-top: 4em;
}
.calendar_plannerRowWidget .calendar_calEvent:not(.calendar_calEventSmall) .calendar_calTimespan {
  display: none;
}
.calendar_plannerRowWidget .calendar_calEvent:not(.calendar_calEventSmall) .calendar_calEventHeader .calendar_calEventTitle {
  display: inline;
  font-weight: normal;
}
/* Events as displayed in a list, not sized by time */
.calendar_calTimeGridList .calendar_calTimeGridScroll {
  overflow-y: hidden;
}
.calendar_calTimeGridList .calendar_calGridHeader {
  min-height: 1em;
}
.calendar_calTimeGridList .calendar_calDayColAllDay {
  display: none;
}
.calendar_calTimeGridList .calendar_calDayColHeader {
  min-height: initial;
  padding-bottom: 0px;
}
.calendar_calTimeGridList .calendar_calDayColHeader > div[data-date] {
  border: none;
}
.calendar_calTimeGridList .calendar_calDayCol > div.event_wrapper {
  position: absolute;
  top: 0px;
  bottom: 3em;
  width: 100%;
}
.calendar_calTimeGridList .calendar_calEvent {
  height: 1.1em;
  position: relative;
  border: none;
  border-bottom: none;
  border-right: none;
  border-radius: 0px;
  padding-left: 6px;
}
.calendar_calTimeGridList .calendar_calEventHeader {
  display: none !important;
}
.calendar_calTimeGridList .calendar_calEventTitle {
  font-weight: normal;
  display: inline-block;
  white-space: nowrap;
  flex: 1 1;
  overflow: hidden;
  text-overflow: ellipsis;
}
.calendar_calTimeGridList .calendar_calEventBody {
  overflow: hidden;
  border: none;
  background: white !important;
  height: 100%;
  padding-left: 6px;
  display: flex;
}
.calendar_calTimeGridList .calendar_calEventBody .calendar_calTimespan {
  display: inline-block;
  text-align: right;
  padding-right: 1px;
  opacity: 0.8;
  font-size: 90%;
  flex: 0 0 auto;
}
.calendar_calTimeGridList .calendar_calEventBody > p {
  display: none;
}
.calendar_calTimeGridList .calendar_calDayCol .hiddenEventAfter {
  left: 0px;
  width: 100%;
  margin-top: -1.5ex;
  height: 2.1ex;
  border-bottom-left-radius: 0px;
  overflow: visible;
}
.calendar_calTimeGridList .calendar_calDayCol .hiddenEventAfter:before {
  content: attr(data-hidden_label);
  display: block;
  height: 100%;
  min-height: 3ex;
  background: white;
  z-index: 21;
  padding-left: 12px;
}
.calendar_calTimeGridList .calendar_calDayCol .hiddenEventAfter:hover {
  /* Need !important to override calculated height*/
  top: initial !important;
  bottom: 0px;
  white-space: pre;
  background: white;
  height: 100%;
  overflow: auto;
}
.calendar_calTimeGridList .calendar_calDayCol .hiddenEventAfter:hover:before {
  display: none;
}
/* table of the dayView containing 2 cols: 1) day-view, 2) todos
*/
.calendar_calDayView {
  width: 100%;
}
/* calDayTods is the day-view's todo column, containing the calDayTodoHeader and the calDayTodoTable
 */
.calendar_calDayTodos .calendar_calDayTodosHeader {
  margin: 0px;
  padding: 2px;
  font-weight: bold;
  height: 23px;
  line-height: 23px;
}
.calendar_calDayTodos .calendar_calDayTodosTable {
  overflow: auto;
  position: absolute;
  top: 3em;
  bottom: 8px;
  width: 100%;
}
.calendar_calDayTodos {
  width: 98%;
  border: 1px solid silver;
}
.calendar_calDayTodosHeader {
  text-align: center;
}
.calendar_calDayTodosTable tr {
  page-break-inside: avoid;
}
.calendar_calDayTodosTable tr td span:first-child {
  white-space: nowrap;
}
.calendar_calDayTodosHeader button {
  width: 24px;
  height: 24px;
  padding-left: 0px;
  margin: 0px 4px 1px 0;
  border-radius: 3px;
  border: 1px solid silver;
  background-color: #fafafa;
  position: absolute;
  left: 2px;
}
/******************************************************
 * CSS settings for the planner views (calendar_plannerWidget) *
 ******************************************************/
/* calendar_plannerWidget represents the whole planner, consiting of the calendar_plannerHeader and multiple plannerRowWidgets
 */
.calendar_plannerWidget {
  position: relative;
  top: 0px;
  left: 0px;
  width: 99.5%;
}
.calendar_plannerWidget > div:not(.calendar_plannerHeader) {
  overflow-y: auto;
  overflow-x: hidden;
}
/* ... */

